--- a/app/views/client_mailer/new_client.text.erb
+++ b/app/views/client_mailer/new_client.text.erb
@@ -4,6 +4,9 @@ Phone Number: <%= @client.phone %>
 
 Email: <<%= @client.email %>>
 
+Address: <%= @client.address %>
+
 I need help with: <%= @client.case_type %>
 
 Additional Content: <%= @client.content %>
+
