--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1318,26 +1318,26 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		.topbar, .logo-block, .main-block{display: none; }
 		.main-header{padding:0; }
 	}
-	.mobile-landing {@include sec-default();}
 	.title-line{width:50px; height: 1px; background-color: rgba($dark, .3); @include center-block(); margin-bottom: 20px;}
-	h1, h2, h3, h4, h5, p {font-family: $open; line-height: 1.4em}
-	.sec1 {@include sec-default(); background-color: $white; height: 500px;
+
+	.mobile-accident-attorney { h1, h2, h3, h4, h5, p {font-family: $open; line-height: 1.4em;}}
+	.sec1 {@include sec-default(); background-color: $white; height: 430px;
 		@include sec-bgimage(); background-size: 30%; background-image: url(image_path('crash-mobileal.png')); background-position: bottom right;
 		.txt {width: 80%; text-align: center;padding-top:50px;@include center-block();}
-			h3{font-size: 18px;}
-			h1 {font-weight: 600;
-				b {font-weight: 800; }
-			}
-			h4{font-size: 20px;}
-			h3.phone {color: $white; letter-spacing: 1px; font-size: 25px; width: 25%; padding: 5px; font-weight: bold; background-color: $dk-blue; @include center-block();}
+		h3{font-size: 18px;}
+		h1 {font-weight: 600;
+			b {font-weight: 800; }
+		}
+		h4{font-size: 20px;}
+		h3.phone {color: $white; letter-spacing: 1px; font-size: 25px; width: 35%; padding: 5px; font-weight: bold; background-color: $dk-blue; @include center-block();}
 	}
 
 	.sec2 {@include sec-default(); background-color: lighten($blue, 20%);
 		position: relative;z-index: 0;
-		&::before {@include before(); height: 210px; background-color: $navy;}
+		&::before {@include before(); height: 280px; background-color: $navy;}
 	}
 
-	.form {display:inline-block; width: 35%; margin-left: 5%;float: left; padding: 10px 30px;  background-color: $blue; margin-top: -5%;
+	.form {display:inline-block; width: 38%; margin-left: 2%;float: left; padding: 10px 20px; background-color: $blue; margin-top: -5%;
 		p span {font-style: italic; color: $white; font-size: 14px;}
 	}
 	.notice {color: red;}
@@ -1363,12 +1363,60 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 	.text-sec {display: inline-block;float: right; width: 58%; padding: 25px 30px 0px 10px; text-align: center;
 		p {font-size: 19px; line-height: 1.6em; font-weight:600; font-family: $lato; color:white;}
 		.top{@include sec-default(); padding: 20px 0;
-			p {width: 78%; float: left; display: inline-block;}
-			img {width:18%; display: inline-block; margin-top: 20px;}
+			p {width: 99%; @include center-block();}
+			img {width:15%; @include center-block(); margin-top: 10px;}
 		}
 		.bot{@include sec-default(); margin:25px 0; padding-top: 20px;}
 		h4 {font-weight: bold; text-align: center; color: $navy; text-transform: uppercase; margin-top: 15px;}
 		h3.phone {color: $white; letter-spacing: 1px; font-size: 25px; width: 30%; padding: 5px; font-weight: bold; background-color: $dk-blue; @include center-block();}
+	}
+
+	@include bp(xl) {
+		.sec1 {height: 500px;
+			h3.phone {width: 25%; }
+		}
+
+		.sec2::before {height: 210px;}
+		.form {width: 35%; margin-left: 5%; padding: 10px 30px; }
+		.text-sec {
+			.top {
+				p {width: 78%; float: left; display: inline-block;}
+				img {width:18%; display: inline-block; margin-top: 20px;}
+			}
+		}
+	}
+
+	@include bp(tb) {
+		.header-new {padding-bottom: 10px;}
+		.form {margin-top: 30px;}
+		.text-sec .bot {
+			br {display: none;}
+			h3.phone {width: 50%;}
+		}
+	}
+
+	@include bp(md) {
+		header.header-new .off-canvas {margin-top:0; float: right;}
+
+		.sec1 {
+			.txt {width:98%;}
+			h3.phone {width: 50%;}
+		}
+
+		.sec2::before{height: 46%;}
+		.form {margin-top: 10px; width: 40%; margin-left: 0;}
+		.form-group {width: 100%;}
+		.text-sec {width: 59%; padding: 25px 10px 0px;
+			p{font-size: 18px;}
+			.top {padding: 20px 0 0;
+				img {width: 90px;}
+			}
+			.bot{padding-top: 45px;
+				p{margin-bottom: 15px;}
+				h3.phone {width: 75%; }
+				h4{margin-top: 25px;}
+			}
+		}
 	}
 }
 
