--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,11 @@
 
       ga('create', 'UA-97185827-1', 'auto');
       ga('send', 'pageview');
-
     </script>
 
+    <script type="text/javascript">
+      (function(a,e,c,f,g,h,b,d){var k={ak:"855304624",cl:"m1YOCKa5s3QQsNPrlwM",autoreplace:"251-943-8638"};a[c]=a[c]||function(){(a[c].q=a[c].q||[]).push(arguments)};a[g]||(a[g]=k.ak);b=e.createElement(h);b.async=1;b.src="//www.gstatic.com/wcm/loader.js";d=e.getElementsByTagName(h)[0];d.parentNode.insertBefore(b,d);a[f]=function(b,d,e){a[c](2,b,k,d,null,new Date,e)};a[f]()})(window,document,"_googWcmImpl","_googWcmGet","_googWcmAk","script");
+    </script>
   </head>
 
    <body class=" <%= controller_name %> <%= action_name %>">
