--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -2,13 +2,13 @@
 @import "mixins";
 
 header.header-new {
+  margin-top: -20px;
   @include sec-default(); background-color: $navy;
 
   .topbar{@include sec-default(); background-color: darken($navy, 3%); padding: 5px 20px;
       h5 {color: $lt-blue; width: 60%; float: right; font-family: $cinzel; font-weight: bold;@include tshadow($dk-blue); margin-top:10px; font-size: 16px;
         span {color: $white;}
       }
-
   }
 
     .main-header {@include sec-default(); padding: 10px 90px 5px;}
