--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -905,13 +905,12 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 .resources { background-color: $light;
-	background-image: url(image_path('blur'));
-	@include sec-bgimage();
+	background-image: url(image_path('blur')); @include sec-bgimage();
+	position: relative; z-index: 0;
+	&::before {@include before(); background-color: rgba($dark, .2);}
 	.cst-header {
 		height: 250px;
-		background-color: rgba($dark, .55);
-
-		h1 {color: $white; font-size: 45px; @include tshadow(rgba($dark, .6));font-family: $open; margin-top: 60px;}
+		h1 {color: $white; font-size: 45px; @include tshadow(rgba($black, .8));font-family: $open; margin-top: 40px;}
 		h4 {font-weight: bold; color: $white; @include tshadow(rgba($dark, .8)); font-family: $open;}
 	}
 
@@ -927,12 +926,55 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		}
 		hr.fancy {width:40%; border-top: 1px solid rgba($gray, .5); float: left;margin-top: 5px; margin-bottom: 20px; &:after {height:3px;}}
 
-		.list {padding-left:70px;
-			p {margin-bottom: 10px; padding-left: 20px; font-size: 15px;
+		.list {padding-left:50px;
+			p {margin-bottom: 10px; padding-left: 20px; font-size: 15px;}
+			.res-link{color: $navy; &:hover {color: $br-blue; font-weight: bold;}}
+
+			&.env {
+				h4, .icon {display: inline-block; float: left;}
+				h4 {font-weight: bold; font-family: $open;  font-size: 16px; padding-top: 5%;}
+				.icon {width: 65px;}
+			}
 		}
-			.res-link{color: $navy; &:hover {color: $br-blue; font-weight: bold;}}}
+		.clearfix.env {margin-bottom: 25px;}
 
 		.border-text { width:85%; @include center-block(); margin: 25px auto; padding: 15px 0 10px; text-align: center; border-top:1px solid #dfdfdf; border-bottom:1px solid #dfdfdf;}
+	}
+
+	@include bp(tb) {
+		&::before {display: none;}
+		.cst-header {background-color: $lt-blue; height:200px;
+			h1 {font-size: 35px; margin-top: 20px;}
+		}
+
+		.resource-list {width: 95%;
+			.list {padding-left: 20px;}
+			.list.env .icon {width: 55px;}
+			h3 {font-size: 18px;}
+		}
+	}
+
+	@include bp(md) {
+		.cst-header {height: 170px;
+			h1 {margin-top: 0;}
+		}
+		.resource-list {width:85%; @include center-block();
+			.list.env {margin-top: 40px;
+				.icon {width:40px; }
+				h4 {padding-top: 2%; }
+			}
+		}
+	}
+
+	@include bp(xs) {
+		.cst-header {padding: 20px 0; height: auto; }
+		.resource-list {@include sec-default(); margin-top: 0px; padding-top: 25px; overflow: hidden;
+			.list {padding-left: 10px;
+				p{padding-left: 5px;}
+			}
+			.list.env h4 {font-size: 15px;}
+			.list.env .icon {width: 30px;}
+		}
 	}
 }
 
@@ -1462,6 +1504,23 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 
+.wills-trusts-estate {
+	.wte {
+		h1, h2, h3, h4, h5, p {font-family: $open; line-height: 1.4em;}
+		h3 {font-weight: 800;}
+	}
+
+	.wte-s1 {
+		// background-color: lighten($blue, 50%);
+		@include sec-default(); padding: 30px 60px;
+		@include sec-bgimage(); background-image: url(image_path('estate1.jpg'));
+		background-position: center center;
+
+		h1 {font-weight: 800; margin-bottom: 50px;}
+	}
+
+	.wte-s2 { @include sec-default(); padding: 30px 0px;}
+}
 
 
 
