--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,6 +2,7 @@
 <li class="menu-item"><%= link_to "Motorcycle Accidents", motorcycle_accidents_path %></li>
 <li class="menu-item"><%= link_to "Auto Accidents", auto_accidents_path %></li>
 <li class="menu-item"><%= link_to "18-Wheeler Accidents", trucker_accidents_path %></li>
+<!-- <li class="menu-item">link_to "Wills, Trusts, and Estates", wills_trusts_estate_path </li> -->
 <li class="menu-item"><%= link_to "About", about_path %></li>
 <li class="menu-item"><%= link_to "Contact Us", contact_path %></li>
 <li class="menu-item"><%= link_to "Resources", resources_path %></li>
