--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -42,6 +42,15 @@
 	</div>
 
 	<div class="col-md-6">
+		<div class="list env">
+			<h3 class="tmargin0">Environmental Litigation</h3>
+			<hr class="fancy"><div class="clearfix"></div>
+
+			<%= image_tag('elg-logo.png', class: 'img-responsive icon', alt: 'Environmental Litigation Group P.C. Logo') %>
+			<h4><%= link_to "Environmental Litigation Group P.C.", 'http://www.elglaw.com/', target: '_blank', class: 'res-link' %></h4>
+		</div>
+		<div class="clearfix env"></div>
+
 		<div class="list">
 			<h3 class="tmargin0">Escambia County Resources</h3>
 			<hr class="fancy"><div class="clearfix"></div>
