testing the wills

--- a/app/views/static_pages/wills-trusts-estate.html.erb
+++ b/app/views/static_pages/wills-trusts-estate.html.erb
@@ -2,28 +2,151 @@
 <% @page_description = "New Subject" %>
 
 <div class="wte">
+	<div class="wte-h1">
+		<div class="content">
+			<h1 class="text-center">Estate Planning, Estate Litigation, Wills &amp; Trusts</h1>
+			<hr>
+			<p>
+				For years, Alabama attorney, Noel B. Leonard has been assisting clients throughout Mobile, Baldwin, and Escambia counties on cases concerning wills, trusts, and estates.
+				Attorney Leonard has the valuable experience it takes to make even the most complex and emotional cases of this nature go smoothly.
+			</p>
+		</div>
+	</div>
+
 	<div class="wte-s1">
 		<div class="container">
-				<h1>Wills, Trusts, Estate Planning, &amp; Estate Litigation</h1>
-				<p>Probate cases in the state of Alabama have the potential to get very complicated. When preparing your estate and planning for the future, it is best to seek counsel from an Alabama attorney with a comprehensive understanding of the process, and significant experience with estate litigation.</p>
+			<div class="left">
+				<p class="top">When a person in the state of Alabama passes away without a will or an estate plan, the state executes its own process for dividing that person's assets among their successors -- with no say from relatives, loved ones, or even the personal feelings of the deceased. Preparing either a will or an estate plan, however, allows you to give clear, detailed instructions on how/to whom your assets will be distributed. </p>
 
-				<p>Alabama attorney, Noel B. Leonard has the valuable experience it takes to make even the most difficult cases regarding wills, trusts, and estates go smoothly.</p>
+				<p class="mid">Because estate planning is extremely complex, it is most successfully done with the help of an Alabama attorney who has a comprehensive understanding of the process, and significant experience with estate litigation.
+				</p>
+
+				<p class="bold">
+				Alabama attorney, Noel B. Leonard has both. He is a leader in the area of estate litigation. He is dedicated to providing his clients with reliable information on the legal requirements and tax consequences of estate planning, and organizes strategies to avoid/settle any conflicts over inheritance, wills (or lack thereof), and distribution of assets.</p>
+			</div>
+
+			<div class="right">
+			 	<!-- <h4>If you are interested in learning more about Attorney Leonard's services regarding Estate Planning, Wills, or Trusts<br> <b>Give him a call to set up a free consultation, or fill out the form below to get started.</b></h4> -->
+	      <!-- <h3 class="phone"><%= number_to_phone(2519438638, delimiter: '-') %></h3>  -->
+	      <%= image_tag('grand-walk.jpg', class: 'img-responsive', alt: 'Noel B. Leonard, Alabama estate planning attorney') %>
+	    </div>
+		</div>
+	</div>
+
+  <div class="wte-s2">
+    <div id="accordeon" class="inline-left">
+      <div class="cbp-item">
+        <div class="cbp-caption zero">
+      		<div class="cbp-caption-defaultWrap">
+            <h3>What is Estate Planning?</h3>
+          </div>
+
+          <div class="cbp-caption-activeWrap">
+            <div class="cbp-l-caption-body">
+            	<p>
+						    "Estate" is just a fancy word that means "everything you own" -- home, property, cars, bank accounts, personal possessions, etc... <br>Estate planning essentially means to prepare specific instructions for what will happen to all of your assets in the event of your death or incapacitation.
+            	</p>
+
+            	<p>
+            		People often think that an estate plan is only necessary later in life, but that is not the case. A properly planned estate is useful at any time, for anyone who wants to control the way their assets are distributed in the event of their death. Developing such a plan is especially important if you have a family, as it is the best way to be sure that everyone will be taken care of.
+            	</p>
+            </div>
+         	</div>
+        </div>
+
+        <div class="cbp-caption first">
+          <div class="cbp-caption-defaultWrap">
+            <h3>Wills</h3>
+          </div>
+
+          <div class="cbp-caption-activeWrap">
+            <div class="cbp-l-caption-body">
+							<p>A well drafted will is one of the most important pieces of estate planning. Your will goes into effect at the time of your death, giving specific directions for your property, and appointing a legal executor who will carry out those directions during the <b>probate process</b> (the court-supervised process of administering a person's will).</p>
+
+							<p>Drafting a will can save your family time, money, and potential controversy over the legal division of your assets. In the state of Alabama, any person who is 18 years or older, and considered "sound of mind" can draft a will. It must be signed by the testator (the person the will is for) -- or a person instructed by the testator if they are too ill to sign for themselves, and there must be two competent witnesses present.</p>
+
+							<p>If you live in Baldwin, Escambia, or Mobile County, and are thinking about creating a will, contact Attorney Leonard today for a free consultation -- because the attorney you choose to assist you with your will is not a small decision. Hiring an attorney who has little to no experience with wills is a big risk. You have a higher chance of a final product that is unclear, and seems open to interpretation. This can result in disputes between the beneficiaries, and often leads to the decision to contest the will.</p>
+
+							<p>Throughout his entire career, Attorney Leonard has been drafting carefully considered, well-formulated wills that thoroughly explain each detail.</p>
+						</div>
+					</div>
+			  </div>
+
+			  <div class="cbp-caption second">
+          <div class="cbp-caption-defaultWrap">
+            <h3>Will Contests</h3>
+          </div>
+
+          <div class="cbp-caption-activeWrap">
+            <div class="cbp-l-caption-body">
+							<p>In the state of Alabama, a will can be contested by a person who is a listed beneficiary, or a person who would stand to receive a piece of an estate if the will was found to be invalid. If a person files a petition to contest a will in Alabama, and can prove that the will was not properly executed, the will can be challenged.</p>
+
+							<p>
+								Attorney Leonard's experience falls on both sides of these cases. He has represented clients who wished to defend the validity of a will, and fought for clients who chose to challenge a will's validity. If you are interested in contesting a will, or defending a will that has been challenged, contact Attorney Noel B. Leonard today for a free consultation.
+							</p>
+						</div>
+					</div>
+			  </div>
+			</div>
+		</div>
+
+    <div id="solo" class="inline-right">
+      <div class="cbp-item">
+			  <div class="cbp-caption third">
+          <div class="cbp-caption-defaultWrap">
+            <h3>Living Wills</h3>
+          </div>
+
+          <div class="cbp-caption-activeWrap">
+            <div class="cbp-l-caption-body">
+            	<p>If you became seriously ill, or lost the ability to speak for yourself, what sort of healthcare and medical treatments would you want? And if your family disagreed, would they be legally obligated to carry out your wishes?</p>
+
+            	<p>In the state of Alabama, a person (referred to as "principal") may designate another person to be their "health care proxy" through a durable power of attorney. The health care proxy will ensure that the principal's medical wishes are carried out, even after the principal is no longer able to communicate their decisions. This is considered a living will, or advanced directive, and is a valuable piece of estate planning that gives direction to medical professionals and family members for end-of-life care.  </p>
+
+            	<p>If you are a resident of Baldwin, Escambia, or Mobile County, and you are interested in learning more about preparing a living will, contact Noel B. Leonard today, for a free consultation.</p>
+
+						</div>
+					</div>
+			  </div>
+
+			  <div class="cbp-caption fourth">
+          <div class="cbp-caption-defaultWrap">
+            <h3>Living Trusts</h3>
+          </div>
+
+          <div class="cbp-caption-activeWrap">
+            <div class="cbp-l-caption-body">
+            	<p>A trust is a legal document, similar to a will in that it outlines exactly what is to happen to your assets in the event of your death or incapacitation, but different in that it does not get put through the probate process. The two types of living trusts are revocable and irrevocable.</p>
+
+            	<p>A <b>revocable living trust</b> is a trust agreement wherein you transfer your assets into ownership of the trust, and remain in control of them as a "trustee." This agreement allows you to continue receiving any interest, make changes to, or revoke the trust at any point. Upon your death, the successor trustee will transfer ownership of the trust to the named beneficiaries, and the assets will go directly to them.</p>
+
+            	<p>An <b>irrevocable living trust</b> means that you permanently give your assets away during your lifetime. You relinquish control and interest, and they are no longer part of your estate.</p>
+
+            	<p>If you would like more information on preparing a living trust in Alabama, contact Attorney Noel B. Leonard, and set up a free consultation.</p>
+
+						</div>
+					</div>
+			  </div>
+
+			  <div class="cbp-caption fifth">
+			    <div class="cbp-caption-defaultWrap">
+			      <h3>Probate</h3>
+			    </div>
+
+			    <div class="cbp-caption-activeWrap">
+			      <div class="cbp-l-caption-body">
+			      	<p>Probate is the court-supervised process of settling a person's estate after their death. The property of the deceased is collected, any owed debts and taxes are paid, and the remaining assets are distributed to the heirs. If there is a will, once it is ruled valid, the assets will be distributed as intended. If there is not a will, the state will follow its own process for distributing the assets.</p>
+
+							<p>Probate cases in the state of Alabama have the potential to get very complicated, and it is incredibly beneficial to have the help of an experienced Alabama attorney.	If you live in Baldwin, Mobile, or Escambia County, and need help with a probate case, contact Attorney Noel B. Leonard's office today, and schedule a free consultation.</p>
+			      </div>
+			    </div>
+			  </div>
+
+			</div>
 		</div>
 	</div>
 
 
-	<div class="wte-s2">
-		<div class="container">
-			<h3>Estate Planning</h3>
-			<p>Estate planning is extremely complex. There are many aspects to consider, and each one requires close attention to detail. Complicated as it may be, it is equally beneficial.</p>
-			<p>When a person in the state of Alabama passes away without a will or estate plan, the state executes its own process for dividing that person's assets among their successors. A properly planned estate, however, allows you to decide how/to whom your assets will be divided in the event of your passing. For years, Alabama Attorney Noel B. Leonard has been assisting clients throughout Mobile, Baldwin, and Escambia counties  helps to avoid disputes and conflict between the surviving family members.</p>
 
-			<h3>Experience Matters</h3>
-			<p>If you hire an estate planning attorney with little-to-no experience, you run the risk of ending up with a will that is unclear, and seems open to interpretation. This can result in disputes between the successors and the decision to contest the will. </p>
-			<p>Noel B. Leonard has been succesfully drafting wills, and litigating </p>
-		</div>
-	</div>
 
 </div>
-<!-- http://daviswillsandtrusts.com/about-estate-planning/ -->
-
