--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -6,7 +6,7 @@ header.header-new {
   @include sec-default(); background-color: $navy;
 
   .topbar{@include sec-default(); background-color: darken($navy, 3%); padding: 5px 20px;
-      h5 {color: $lt-blue; width: 60%; float: right; font-family: $cinzel; font-weight: bold;@include tshadow($dk-blue); margin-top:10px; font-size: 16px;
+      h5 {color: $lt-blue; width: 60%; float: right; font-family: $lato; font-weight: bold;@include tshadow($dk-blue); margin-top:10px; font-size: 16px;
         span {color: $white;}
       }
   }
