--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1504,22 +1504,72 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 }
 
 
-.wills-trusts-estate {
-	.wte {
-		h1, h2, h3, h4, h5, p {font-family: $open; line-height: 1.4em;}
-		h3 {font-weight: 800;}
+.wte {
+	h1, h2, h3, h4, h5, p {font-family: $open; line-height: 1.4em;}
+	h3 {font-weight: 800;}
+	h1 {font-weight: 800; font-size: 30px; color: $blue;}
+	hr {width: 60%; @include center-block();
+		&.left {float: left;}
 	}
 
-	.wte-s1 {
-		// background-color: lighten($blue, 50%);
-		@include sec-default(); padding: 30px 60px;
-		@include sec-bgimage(); background-image: url(image_path('estate1.jpg'));
-		background-position: center center;
-
-		h1 {font-weight: 800; margin-bottom: 50px;}
+	.wte-h1 {@include sec-default(); padding: 30px 0px 70px;
+		.content {width: 85%; @include center-block(); text-align: center;}
+		// .content { display: inline-block; width: 50%; float: left; }
+		hr {margin-bottom: 25px;}
 	}
 
-	.wte-s2 { @include sec-default(); padding: 30px 0px;}
+	.offer { @include sec-default(); padding:30px 0px;background-color: $blue;text-align: center; color: $white;
+		.inner {width: 70%; float: left; padding-right: 15px; margin-left: 2%;}
+		h4 {font-size: 17px; font-weight: 600; @include tshadowl(rgba($dark, .5));
+			span {font-weight: 800;}
+		}
+		h3.phone {color: $white; letter-spacing: 1px; font-size: 25px; width: 30%; padding: 5px; font-weight: bold; background-color: $dk-blue; @include center-block();}
+	}
+	.wte-s1 {@include sec-default(); padding: 0 75px 40px;
+		// position: relative;z-index: 0; &::before {@include before(); height: 165px; background-color: $blue;}
+
+		.left, .right {display: inline-block;}
+		.left {width: 69%; float: left; padding: 20px 0px;}
+		.right {width: 30%; float: right; color: white; padding-left:15px;}
+		.left p {font-size: 16px; display: inline-block; float: left; width: 50%; padding:15px 15px 5px;}
+		p.bold{font-weight: 700;}
+	}
+
+	.wte-s2 { @include sec-default(); padding: 30px 60px ; background-color: #f7f7f7;
+		.cbp-item {width:100%; }
+		p {color: black; font-size: 15px;}
+
+		#accordeon, #solo {display: inline-block; float: left; width:39%; padding-right: 10px; margin-top: 30px;}
+		#solo {float: right; padding-right: 0;}
+		.cbp-l-caption-body, .cbp-caption-defaultWrap {padding-left: 15px;}
+		.cbp-caption-defaultWrap {text-align: center;}
+		.image {width:20%; float: left; margin-right: 2%;}
+		p.cta {font-weight: bold;}
+	}
+
+	.form {
+		padding: 5px 15px 1px; background-color: $dk-blue;
+	 	margin-top: -60%;
+		p span {font-style: italic; color: $white; font-size: 14px;}
+	}
+	.notice {color: red;}
+	form{@include sec-default(); padding-top:10px;
+		h4{font-weight: bold; color: $light; text-align: center; text-transform: uppercase; font-size: 19px; margin-bottom: 15px; @include tshadowl($dark);}
+	}
+	.form-group {display: inline-block; float: left; width: 48%; text-align: left;
+		&.last-name, &.email {float: right;}
+		&.address  {@include sec-default();}
+		&.case_type { float: left; width: 30%; display: none;
+			input, label{display: inline-block; width:auto; float: none;}
+			input{float: left; margin-right: 7px; }
+		}
+		&.message {width: 100%; @include center-block();}
+		&.submit {width: 100%; @include center-block(); font-size: 15px; .send-message {background-color: $blue; color: $white; padding: 5px; text-transform: uppercase; @include tshadowl($dark);}}
+
+		p {font-size: 13px; margin-bottom: 4px; color: $light;}
+		input,textarea {width:100%; background-color: $offwhite; padding: 5px; border: none; color: black; }
+		textarea {height: 70px;}
+	}
 }
 
 
