--- a/app/views/clients/thank-you.html.erb
+++ b/app/views/clients/thank-you.html.erb
@@ -1,5 +1,5 @@
-<% @page_title = "Form Submission" %>
-<% @page_description = "New Subject" %>
+<% @page_title = "Client Form Submission" %>
+<% @page_description = "Thank you for submitting your case form. We will be in touch with you soon." %>
 
   <div class="pa-header">
       <div class="overlay">
