--- a/app/views/estates/new.html.erb
+++ b/app/views/estates/new.html.erb
@@ -8,7 +8,7 @@
 		<div class="container">
 			<div class="content">
 				<p>For years, Alabama Attorney, Noel B. Leonard has been assisting clients throughout Mobile, Baldwin, and Escambia counties with estate planning cases. Estate planning in Alabama is extremely complex, but Attorney Leonard has a comprehensive understanding of the process, and significant experience with estate litigation.
-				He has the valuable knowledge it takes to make even the most complex and emotional cases concerning wills, trusts, and estate planning go smoothly.</p>
+				He has the valuable knowledge it takes to make even the most complex and emotional cases concerning wills, trusts, and estates go smoothly.</p>
 			</div>
 		</div>
 	</div>
@@ -90,8 +90,8 @@
 	</div>
 
   <div class="wte-s2">
-		<div class="image">
-      <%= image_tag('grand-walk.jpg', class: 'img-responsive', alt: 'Noel B. Leonard, Alabama estate planning attorney') %>
+		<div class="image"> &nbsp;
+      <!-- <%= image_tag('grand-walk.jpg', class: 'img-responsive', alt: 'Noel B. Leonard, Alabama estate planning attorney') %> -->
     </div>
 
     <div id="accordeon" class="inline-left">
