last img attempt

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1534,15 +1534,17 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		p.bold{font-weight: 700;}
 	}
 
-	.wte-s2 { @include sec-default(); padding: 30px 60px ; background-color: #f7f7f7;
-		@include sec-bgimage(); background-image: url('grand-walk-full.jpg'); background-size: 24%;
+	.wte-s2 { @include sec-default(); padding: 0px 60px 0 0; background-color: #f7f7f7;
+		// @include sec-bgimage(); background-image: url('grand-walk-full.jpg'); background-size: 24%;
 		.cbp-item {width:100%; }
 		p {color: black; font-size: 15px;}
 
-		#accordeon, #solo {display: inline-block; float: left; width:39%; padding-right: 10px;}
+		#accordeon, #solo {display: inline-block; float: left; width:39%; padding-right: 10px; margin-top: 30px}
 		.cbp-l-caption-body, .cbp-caption-defaultWrap {padding-left: 15px;}
 		.cbp-caption-defaultWrap {text-align: center;}
-		.image {width:20%; float: left; margin-right: 2%;}
+		.image {width:22%; float: left;  background-color: transparent;
+			.sm-size{display: none;}
+		}
 		p.cta {font-weight: bold;}
 	}
 
@@ -1601,10 +1603,13 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 		}
 
 		.wte-s2 { padding: 30px 60px 15px;
-			background-image: url('grand-walk.jpg'); background-size: 33%;
+			// background-image: url('grand-walk.jpg'); background-size: 33%;
 			#accordeon, #solo {display:inline-block; width:67%; float: right; padding-right: 0; margin-top: 0px;}
 			.cbp-caption-defaultWrap {text-align: left; margin-left: 2%;}
-			.image {width:30%; float: left; margin-right: 0;}
+			.image {width:30%; float: left; margin-right: 0;
+				.sm-size{display: block;}
+				.full-size {display: none;}
+			}
 			h3 {font-size: 20px;}
 		}
 	}
@@ -1627,7 +1632,7 @@ hr.fancy {border-top:1px solid rgba($offwhite, .3); width: 60%; position: relati
 			}
 		}
 
-		.wte-s2 { padding: 30px 40px;
+		.wte-s2 { padding: 30px ;
 			#accordeon, #solo { width:68%; }
 			.cbp-caption-defaultWrap {margin-left: 0; padding-bottom: 0;}
 		}
