--- a/app/views/estates/new.html.erb
+++ b/app/views/estates/new.html.erb
@@ -90,8 +90,9 @@
 	</div>
 
   <div class="wte-s2">
-		<div class="image"> &nbsp;
-      <!-- <%= image_tag('grand-walk.jpg', class: 'img-responsive', alt: 'Noel B. Leonard, Alabama estate planning attorney') %>  -->
+		<div class="image">
+      <%= image_tag('grand-walk-full.jpg', class: 'img-responsive full-size', alt: 'Noel B. Leonard, Alabama estate planning attorney') %>
+      <%= image_tag('grand-walk.jpg', class: 'img-responsive sm-size', alt: 'Noel B. Leonard, Alabama estate planning attorney') %>
     </div>
 
     <div id="accordeon" class="inline-left">
