--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -107,4 +107,8 @@
     @else if $point == xl {
         @media (min-width: 1025px) { @content ; }
     }
+
+    @else if $point == lg {
+        @media (min-width: 1500px)  { @content ; }
+    }
 }
