--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,10 +37,13 @@
 
 				<div class="break"></div>
 				<h4><span>Who do we represent?</span></h4>
-					<p class="second">If you are suffering from a serious injury caused by a motorcycle, automobile, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p>
+					<p class="second">
+					Noel and his firm represent clients from Baldwin, Mobile, and Escambia Counties, on cases involving accident injuries, estate planning, municipal court, and more. </p>
+					<!-- <p class="second">If you are suffering from a serious injury caused by a motorcycle, automobile, or 18-wheeler accident in Baldwin, Mobile, or Escambia County, Noel and his firm can help.</p> -->
 
 					<p>Noel B. Leonard Attorney, LLC employs a knowledgeable staff. Our team is capable of addressing your legal concerns, and helping you to understand your rights.</p>
-					<p>Our firm will evaluate your case, and help file your claim, and make every effort to see that you receive proper compensation for your injuries sustained during the accident.</p>
+					<p>If you are suffering from a serious injury caused by a motorcycle, automobile, or 18-wheeler accident, our firm will evaluate your case, help file your claim, and make every effort to see that you receive proper compensation for your injuries sustained during the accident.</p>
+
 					<%= link_to "More About Us", about_path, class: 'fst-links one' %>
 			</div>
 			<%=image_tag('noel-suit.jpg', alt: 'Noel Leonard, Foley Attorney', class: 'img-responsive portrait') %>
@@ -57,7 +60,6 @@
 
 		<div id="practice-areas" class="info-box-alt">
 			<div class="top">
-				<!-- <h4 class="open text-center">"Accidents happen...but finding the right attorney doesn't happen by accident."</h4> -->
 				<h4 class="pbi">Our practice areas include:</h4>
 				<hr class="fancy dark hlf">
 
@@ -96,6 +98,19 @@
 					</div>
 				</div>
 
+				<div class="practice-box extra">
+					<div class="top">
+						<h4>Estate Planning</h4>
+						<p>Attorney Leonard offers a number of Estate Planning services.
+						He has a comprehensive understanding of the process and its requirements under Alabama law.
+						He has valuable experience with estate litigation, drafting wills and setting up trusts.</p>
+						<%= link_to "Learn More", wills_trusts_estate_path, class: 'pb-links' %>
+					</div>
+					<div class="btm">
+						<p><b>Noel and his firm also assist clients with Municipal Court Cases, Deeds, and Titles.</b></p>
+					</div>
+				</div>
+
 				<div class="practice-box cbox">
 					<div class="cbox">
 						<div class="overlay">
@@ -121,12 +136,6 @@
 
 	</div>
 </div>
-<!-- , :size => "16x10", :poster => "screenshot.png" -->
-
-
-
-
-
 
 
 
