--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -90,6 +90,6 @@
 
 	<div class="clearfix"></div>
 	<div class="row">
-		<div class="border-text"><p>Call us now to schedule a consultation (251) 943-8638 or fill in our <a href="http://www.attorney-leonard.com/contact-us/">Case Evaluation Form</a>, and we will contact you as soon as possible.</p></div>
+		<div class="border-text"><p>Call us now to schedule a consultation (251) 943-8638 or fill in our <a href="/contact">Case Evaluation Form</a>, and we will contact you as soon as possible.</p></div>
 	</div>
 </div>
